[gd_scene load_steps=11 format=2]

[ext_resource path="res://items/Fireball.gd" type="Script" id=1]
[ext_resource path="res://Sounds/my_sounds/arrow_hit.wav" type="AudioStream" id=2]
[ext_resource path="res://Art/FB00_nyknck/FB001.png" type="Texture" id=3]
[ext_resource path="res://Art/FB00_nyknck/FB003.png" type="Texture" id=4]
[ext_resource path="res://Art/FB00_nyknck/FB004.png" type="Texture" id=5]
[ext_resource path="res://Art/FB00_nyknck/FB005.png" type="Texture" id=6]
[ext_resource path="res://Art/FB00_nyknck/FB002.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 1.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.437498, 0.333335 )

[node name="Fireball" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 6, -1 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, -1 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="ArrowHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 1.748
attenuation = 3.0

[node name="QueueTimer" type="Timer" parent="."]
wait_time = 0.14

[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="QueueTimer" to="." method="_on_QueueTimer_timeout"]
